--- a/resources/sass/profileSettings.scss
+++ b/resources/sass/profileSettings.scss
@@ -1,4 +1,5 @@
 @import 'base/global';
+@import 'components/actionBtn';
 
 
 
@@ -26,7 +27,28 @@
     display: flex;
     flex-direction: column;
     margin: 30px 0;
+    .error-message{
+        justify-content: flex-start;
+        .invalid-feedback{
+            margin-left:30px;
+            width: fit-content;
+            white-space: nowrap;
+            .message{
+                color:red;
+                font-size:14px;
+                font-weight:normal;
+            }
 
+        }
+    }
+    .action-btn{
+        margin-left:180px;
+        width: fit-content;
+        @media screen and(max-width:$m-width) {
+            margin-left:0;
+        }
+    }
+    
     * {
         font-size: 16px;
     }
