--- a/public/css/profileSettings.css
+++ b/public/css/profileSettings.css
@@ -57,6 +57,11 @@ li {
   }
 }
 
+.account-privacy-form .privacy-description {
+  color: #8e8e8e;
+  font-size: 14px;
+}
+
 .account-privacy-form .checkbox-container {
   display: flex;
 }
@@ -64,6 +69,10 @@ li {
 .account-privacy-form .checkbox-container span {
   margin-left: 10px;
   font-weight: bolder;
+}
+
+.account-privacy-form .checkbox-container .checkbox-main-text {
+  font-size: 14px;
 }
 
 .edit-profile-form,
