--- a/public/css/login.css
+++ b/public/css/login.css
@@ -73,6 +73,16 @@ footer .lang-copyright .select-lang__arrow {
   margin-left: 6px;
 }
 
+.action-btn {
+  color: white;
+  background-color: #0095f6;
+  font-weight: bolder;
+  font-size: 14px;
+  border: 1px solid #dbdbdb;
+  border-radius: 4px;
+  padding: 5px 9px;
+}
+
 body {
   height: 100%;
   display: flex;
@@ -100,6 +110,29 @@ body {
   right: 64px;
   top: 100px;
   transition: opacity 2s;
+}
+
+.form-container .register .app-name {
+  margin-bottom: 20px;
+}
+
+.form-container .register .register-text {
+  text-align: center;
+  color: #8e8e8e;
+  font-size: 17px;
+}
+
+.form-container .register .action-btn {
+  width: 100%;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.form-container .register .action-btn .fa-facebook-square {
+  font-size: 20px;
+  margin-right: 8px;
 }
 
 .form-container .error-message {
