Show tags on posts when loaded from the server

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -450,6 +450,10 @@ header {
   cursor: pointer;
 }
 
+.post__comments .username-tag {
+  color: #00376b;
+}
+
 .post__publishing-date {
   font-size: 10px;
   color: #8e8e8e;
