--- a/resources/sass/layout/home/_post.scss
+++ b/resources/sass/layout/home/_post.scss
@@ -125,6 +125,9 @@
             color:#8e8e8e;
             cursor:pointer;
         }
+        .username-tag{
+            color:#00376b;
+        }
     }
     &__publishing-date{
         font-size:10px;
