Notifications main functionalities

--- a/resources/sass/home.scss
+++ b/resources/sass/home.scss
@@ -21,3 +21,23 @@ main{
     max-width:614px;
     margin: 0 auto;
 }
+
+.bell-container{
+    position:relative;
+    .number-notifications{
+        position:absolute;
+        right:0;
+        top:0;
+        width:17px;
+        height:17px;
+        font-size:11px;
+        background-color:red;
+        color:white;
+        border-radius:50%;
+        z-index:10;
+        transform:translate(35%,-35%);
+        display:flex;
+        align-items:center;
+        justify-content: center;
+    }
+}
