--- a/public/css/notifications.css
+++ b/public/css/notifications.css
@@ -45,6 +45,15 @@ body {
 body main {
   max-width: 935px;
   flex-grow: 1;
+  width: 100%;
+}
+
+.edit-btn {
+  font-weight: bolder;
+  font-size: 14px;
+  border: 1px solid #dbdbdb;
+  border-radius: 4px;
+  padding: 5px 9px;
 }
 
 .notifications .round-profile-img {
