--- a/resources/sass/layout/home/_header.scss
+++ b/resources/sass/layout/home/_header.scss
@@ -12,16 +12,18 @@ header {
 .header-content,
 .friends-results {
 
-    width:100%;
-    max-width:975px;
-    display:flex;
+    width: 100%;
+    max-width: 975px;
+    display: flex;
     justify-content: space-between;
-    align-items:center;
-    height:55px;
+    align-items: center;
+    height: 55px;
+
     .search {
         display: flex;
         justify-content: center;
         position: relative;
+        margin-left:5px;
 
         &__input-container {
             .small-search-icon {
@@ -43,6 +45,9 @@ header {
             padding: 7px;
             padding-left: 25px;
             width: 215px;
+            @media screen and(max-width:$t-width){
+                width:100%;
+            }
         }
 
         .up-arrow {
@@ -60,6 +65,7 @@ header {
         .search-results {
             max-height: 360px;
             width: 110%;
+            min-width:200px;
             position: absolute;
             bottom: 0;
             transform: translateY(100%);
@@ -117,9 +123,88 @@ header {
     .user-actions {
         display: flex;
 
+        &.drop-down {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            background-color: white;
+            top: 0;
+            left: 0;
+            display: flex;
+            flex-direction: column;
+
+            >a, div.profile-icon,div.profile-icon > a {
+                padding: 16px;
+                margin:0;
+                display: flex;
+                align-items: center;
+                >a {
+                    padding:0;
+                    margin:0;
+                    width: 100%;
+                }
+                &:hover{
+                    background-color:$primary-bg-color;
+                }
+            }
+
+            //Profile dropdown
+            .profile-icon{
+                margin:0 !important;
+                padding:0 !important;
+                >a{
+                    display:none !important;
+                }
+                .user-pages-links{
+                    display:block;
+                    position:relative;
+                    top:0;
+                    left:0;
+                    transform:none;
+                    box-shadow:none;
+                    width:100%;
+                    a{
+                        padding:16px;
+                        font-size: 18px;
+                        svg{
+                            height:24px;
+                            width:24px;
+                            margin-right:10px;
+                        }
+                    }
+                }
+            }
+
+        }
+
+        .drop-down-icon {
+            font-size:24px;
+            display: none;
+
+            @media screen and(max-width:$t-width) {
+                display: block;
+                margin:16px;
+            }
+        }
+
+
         a,
         .profile-icon {
             margin: 0 8px;
+
+            .icon-text {
+                display: none;
+                margin-left: 10px;
+                font-size: 18px;
+
+                @media screen and(max-width:$t-width) {
+                    display: block;
+                }
+            }
+
+            @media screen and(max-width:$t-width) {
+                display: none;
+            }
 
             img {
                 height: 24px;
@@ -178,14 +263,15 @@ header {
 
             form {
                 input {
-                    outline:none;
+                    outline: none;
                     padding: 8px 48px 8px 16px;
                     border: none;
                     background-color: white;
                     width: 100%;
-                    font-size:16px;
+                    font-size: 16px;
                     border-top: $soft-border;
                     cursor: pointer;
+
                     &:hover {
                         background-color: $primary-bg-color;
                     }
