--- a/resources/sass/home.scss
+++ b/resources/sass/home.scss
@@ -10,6 +10,17 @@
 @import 'components/addMultiImages';
 @import 'components/postOptionsModal';
 
+body{
+    height:100%;
+    display: flex;
+    flex-direction: column;
+}
+
+body main {
+    max-width: 935px;
+    flex-grow:1;
+    width:100%;
+}
 
 a{
     text-decoration:none;
