--- a/resources/sass/base/_general.scss
+++ b/resources/sass/base/_general.scss
@@ -9,6 +9,9 @@ html{
 }
 body{
     background-color: $primary-bg-color;
+    &.hide-overflow{
+        overflow: hidden;
+    }
 }
 ul{
     list-style-type:none;
