--- a/resources/sass/home.scss
+++ b/resources/sass/home.scss
@@ -9,6 +9,7 @@
 @import 'components/modal';
 @import 'components/addMultiImages';
 @import 'components/postOptionsModal';
+@import 'components/actionBtn';
 
 body{
     height:100%;
