--- a/resources/sass/layout/home/_post.scss
+++ b/resources/sass/layout/home/_post.scss
@@ -113,6 +113,9 @@
         .post__username{
             margin-left:8px;
         }
+        .username-tag{
+            color:#00376b;
+        }
     }
     &__comments{
         margin: 8px;
