--- a/public/css/login.css
+++ b/public/css/login.css
@@ -88,11 +88,20 @@ footer .lang-copyright .select-lang__arrow {
 }
 
 body {
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+main {
+  margin-top: 100px;
+}
+
+@media screen and (max-width: 365px) {
+  main {
+    margin-top: 0px;
+  }
 }
 
 .main-content {
